# LocalFinData

./: .gitignore  README.md  YAHOO_FINANCE_DATA_GUIDE.md  get_all_us_stock_price.py  get_public_ip.py  pyproject.toml  requirements.txt  setup.py  yahoo_finance_test_data.csv
data/: README_CANDLES.md  download_progress.json  generate_candlestick_charts.py
docs/: candlestick_generator.md  rate_limit_handling.md  yfinance_data_types.md
localfindata/: __init__.py  config.py  indicators.py  pipeline.py  ticker_info.py
localfindata/vectordb/: __init__.py  embedder.py  ingest.py  search.py  store.py
scripts/: BULK_DOWNLOAD_GUIDE.md  DATA_FORMAT.md  MATLAB_CANDLESTICK_README.md  README.md  TIMEZONE_GUIDE.md  calculate_indicators_batch.py  check_csv_shapes.py  data_dealer.py  download_all_us_stocks.py  download_prices.py  download_stock_data.py  download_stock_data_simple.py  download_ticker_info.py  example_plot_AAPL.m  explore_yahoo_data.py  generate_candlestick_charts.py  generate_stock_data_with_indicators.py  ingest_news_vectors.py  plot_candlestick_chart.m  plot_stock.m  remove_duplicate_columns.py  verify_indicator_time_direction.py
