[project]
name = "localfindata"
version = "0.1.0"
description = "Utilities for downloading financial data with indicators and generating candlestick charts."
authors = [{name = "LocalFinData"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.21",
  "yfinance>=0.2",
  "matplotlib>=3.7",
  "ta>=0.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
